# cronica-jax

./: .gitignore  README.md  pyproject.toml  tokenizer.json
docs/decisions/: 001-pivot-to-data-to-text.md  002-commentator-personas.md  003-future-work-encoder-decoder.md  004-kv-cache.md
results/: metrics.json  samples.md
scripts/: analyze_corpus.py  build_dataset.py  build_prompts.py  clean.py  common.py  compute_metrics.py  diagnose_data.py  eval_heldout.py  load_kaggle.py  push_dataset.py  push_model.py  push_space.py  scrape_news.py  scrape_wikimedia.py  synth_batch.py  synth_cronicas.py
space/: README.md  app.py  requirements.txt
src/cronica/: data.py  model.py  sample.py  tokenizer.py  train.py
tests/: test_e2e.py
