[project]
name = "cronica-jax"
version = "0.0.1"
description = "Mini-LLM in pure JAX for Spanish-language football match reports"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniel Regalado" }]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "optax>=0.2.0",
    "numpy>=1.26",
    "tokenizers>=0.20",
    "datasets>=2.20",
    "huggingface-hub>=0.25",
    "gradio>=4.44",
    "tqdm>=4.66",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
tpu = ["jax[tpu]>=0.4.30"]
dev = ["ruff>=0.6", "pytest>=8.0", "ipykernel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cronica"]

[tool.ruff]
line-length = 100
target-version = "py310"
